--- a/app/_posts/2015-03-01-Pivo.md
+++ b/app/_posts/2015-03-01-Pivo.md
@@ -2,14 +2,201 @@
 layout: place
 weight:  16
 title:  "Pivô"
-subtitle: "--"
+subtitle: "Centro cultural no Copan"
 description: " é um centro cultural no Copan."
 address: "Avenida Ipiranga, 200, República."
 coordinates: "-23º 32’ 45.86” -46º 38’ 40.89”"
-enabled: disabled
+enabled: enabled
+photo: "pivo.jpg"
+coverClass: "pivo"
+shareImage: "pivo_centro_share.jpg"
 permalink: "pivo.html"
 top: "60%"
 left: "35.18%"
 bottom: "35.5%"
 letter: "P"
 ---
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-md-offset-1">
+      <p>Por estar localizado dentro do Copan, o próprio <a href="http://www.pivo.org.br/" target="_blank">Pivô</a> tem um pouco de obra de arte. Quem anda pelo centro cultural, inaugurado em 2012, entre obras de arte contemporânea e a arquitetura de Oscar Niemeyer, dificilmente imagina que no passado o lugar abrigou um hospital dentário e uma agência de banco.</p>
+      <p>“Eu queria um lugar para fazer meu ateliê, mas o proprietário cedeu para um espaço cultural sem fins lucrativos. Ou seja, eu não estava pensando em criar um centro cultural, ele nasceu para o espaço”, explica a artista Fernanda Brenner.</p>
+      <p>Ciente do lugar que ocupa no centro, ela incentiva os artistas que expõem no espaço a reagirem não só ao edifício — “uma micro-cidade dentro de São Paulo” — como também ao complexo contexto social da região.</p>
+      <p>Foi o caso da exposição <a href="http://www.pivo.org.br/exposicoes/pivo-e-a-rua/" target="_blank">Pivô é a Rua</a>, que acabou interagindo com os participantes das manifestações de junho de 2013 e outros personagens dos arredores. “Tivemos músicos da praça da República que vieram tocar aqui dentro, fizemos uma feira de produtos orgânicos, abrimos para os skatistas da praça Roosevelt.”</p>
+    </div>
+  </div>
+  <div class="location row">
+    <div class="col-md-4 col-md-offset-4 text-center">
+      <span class="company">Pivô</span>
+      <span class="address">Avenida Ipiranga, 200, República</span>
+      <span class="coordinates">-23º 32’ 45.86” -46º 38’ 40.89”</span>
+      <div class="compass"></div>
+    </div>
+  </div>
+</div>
+
+
+<div class="centro-container">
+
+  <!-- bloco 1 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Em 2013, fizemos uma grande reforma. Atazanamos o pessoal do prédio com oito meses de demolição, caçamba, barulho. A ideia era remover a parede entre a rua de pedestres e o espaço expositivo, para que as pessoas pudessem entrar sem barreiras.
+          </span>
+          <span class="dia">
+            <strong>Fernanda Brenner</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Terraço do Pivô, nos primeiros andares do Copan.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/pivo/pivo_01.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/pivo/pivo_02.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/pivo/pivo_03.jpg">
+        <p><span class="caption top mobile-only">Terraço do Pivô, nos primeiros andares do Copan.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 2 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Não é um pré-requisito que o artista converse com o espaço. Cada um tem seu processo e a relação com o artista é muito livre. Mas pela particularidade arquitetônica, a maioria acaba reagindo de alguma forma.
+          </span>
+          <span class="dia">
+            <strong>Fernanda Brenner</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Espaço expositivo e a arquitetura de Niemeyer.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/pivo/pivo_04.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-4 col-md-offset-4 show-smooth">
+        <img src="img/content/pivo/pivo_05.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/pivo/pivo_06.jpg">
+        <p><span class="caption top mobile-only">Espaço expositivo e a arquitetura de Niemeyer.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 3 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            Tudo o que fazemos se encaixa no contexto do programa do Pivô. Não fazemos exposição para agradar grandes públicos, a ideia é formar um público para o tipo de trabalho que apresentamos.
+          </span>
+          <span class="dia">
+            <strong>Fernanda Brenner</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Entrada e escritório do centro cultural.</span></p>
+      </div>
+      <div class="col-md-6 f-right col-md-offset-right-2 show-smooth">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/pivo/pivo_07.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-8 pull-right show-smooth">
+        <img src="img/content/pivo/pivo_08.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 pull-right show-smooth">
+        <img src="img/content/pivo/pivo_09.jpg">
+        <p><span class="caption top mobile-only">Entrada e escritório do centro cultural.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 4 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text f-right">
+        <p>
+          <span class="plantin">
+            Por ter um modelo institucional flexível, sem fins lucrativos e horizontal, os artistas podem fazer coisas no Pivô que não poderiam num museu ou numa galeria mais comercial.
+          </span>
+          <span class="dia">
+            <strong>Fernanda Brenner</strong>
+          </span>
+        </p>
+        <p><span class="caption left desktop-only">Caixas usadas para transporte de obras e livros do acervo.</span></p>
+      </div>
+      <div class="col-md-8 show-smooth">
+        <img src="img/content/pivo/pivo_10.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 show-smooth">
+        <img src="img/content/pivo/pivo_11.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-2 show-smooth">
+        <img src="img/content/pivo/pivo_12.jpg">
+        <p><span class="caption top mobile-only">Caixas usadas para transporte de obras e livros do acervo.</span></p>
+      </div>
+    </div>
+  </div>
+
+  <!-- bloco 5 -->
+  <div class="fixie-text-container">
+    <div class="row margin-bottom">
+      <div class="col-md-4 show-smooth fixie-text">
+        <p>
+          <span class="plantin">
+            O centro está passando por um momento importante de reativação de certos espaços através da cultura. Também tem muita gente vindo em busca de uma habitação mais humana. Ao mesmo tempo, pode ser uma coisa perigosa, porque vem com especulação imobiliária.
+          </span>
+          <span class="dia">
+            <strong>Fernanda Brenner</strong>
+          </span>
+        </p>
+        <p><br><span class="caption right desktop-only">Espaços do centro cultural, localizado na República.</span></p>
+      </div>
+      <div class="col-md-8 pull-right">
+      	<div class="show-smooth" style="padding:0">
+          <img src="img/content/pivo/pivo_13.jpg">
+      	</div>
+      </div>
+    </div>
+    <div class="row margin-bottom">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/pivo/pivo_14.jpg">
+      </div>
+    </div>
+    <div class="row margin-bottom double">
+      <div class="col-md-6 col-md-offset-4 show-smooth">
+        <img src="img/content/pivo/pivo_15.jpg">
+        <p><span class="caption top mobile-only">Espaços do centro cultural, localizado na República.</span></p>
+      </div>
+    </div>
+  </div>
+</div>
